Fixed the execution failures